# openmatch

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
build_release/tests/: bench_bus_perf
docs/: market_data.md  msg_bus.md  perf_market_data.md  perf_message_bus.md
include/: khash.h
include/ombus/: om_bus.h  om_bus_error.h  om_bus_market.h  om_bus_relay.h  om_bus_replay.h  om_bus_tcp.h  om_bus_tcp_market.h  om_bus_wal.h
include/openmarket/: om_market.h  om_worker.h
include/openmatch/: om_engine.h  om_error.h  om_hash.h  om_perf.h  om_slab.h  om_wal.h  om_wal_mock.h  orderbook.h
src/: CMakeLists.txt  om_bus_shm.c  om_bus_tcp.c  om_engine.c  om_hash_f14.c  om_hash_khash.c  om_hash_khashl.c  om_market.c  om_perf.c  om_slab.c  om_wal.c  om_wal_mock.c  om_worker.c  orderbook.c
tests/: CMakeLists.txt  bench_bus_perf.c  bench_market_perf.c  test_bus.c  test_engine.c  test_market.c  test_orderbook.c  test_runner.c  test_slab.c  test_wal.c
tools/: CMakeLists.txt  wal_maker.c  wal_match_by_maker.awk  wal_query.c  wal_query.sql  wal_reader.c  wal_sum_qty_by_maker.awk  wal_trace_oid.awk
